fix minor ui bugs
- Fix header search button misalignment when toggled - Display empty package listing page when query for
page that exceeds page limit

--- a/static/css/header_dark.scss
+++ b/static/css/header_dark.scss
@@ -266,7 +266,7 @@ header {
           font-size: 32px;
           position: absolute;
           top: 0px;
-          right: 288px;
+          right: 280px;
           width: 100px;
           height: 100px;
           background-color: white;
@@ -281,7 +281,7 @@ header {
             font-size: 22px;
             padding: 0 10px;
             margin: 0 15px;
-            right: 120px;
+            right: 115px;
             background: none;
 
             &.log {
